--- a/modules/ap572x/ap572x.md
+++ b/modules/ap572x/ap572x.md
@@ -2,7 +2,7 @@
 
 ## Contents.
 
-- [1.AP5724/5/6 - PWM 10-Bit ~1kHz.](#)
+- [1.AP5724/5/6 - PWM 10-Bit ~1kHz.](#1ap572456---pwm-10-bit-1khz)
 
 ## 1.AP5724/5/6 - PWM 10-Bit ~1kHz.
 
@@ -69,7 +69,6 @@ void main(void)
     PPSLOCK = 0x55;
     PPSLOCK = 0xAA;  
     PPSLOCKbits.PPSLOCKED = 0b0;  
-    // PPS Inputs.
     // PPS Outputs.
     RC2PPSbits.RC2PPS = 0b011001;   // RC2 - PWM3.
     PPSLOCK = 0x55;
