--- a/modules/ap572x/ap572x.md
+++ b/modules/ap572x/ap572x.md
@@ -75,7 +75,7 @@ void main(void)
     PPSLOCK = 0xAA;
     PPSLOCKbits.PPSLOCKED = 0b1;
 
-    // Timer2.
+    // Timer2 Settings.
     // ~1kHz @8MHz.
     T2PR = 123;
     T2CON = 0b01000000;
@@ -85,7 +85,7 @@ void main(void)
     // Timer2 Enable.
     T2CONbits.ON = 0b1;
 
-    // PWM3.
+    // PWM3 Settings.
     PWM3DCL = 0;
     PWM3DCH = 0;
     PWM3CON = 0b00000000;
@@ -117,6 +117,14 @@ void main(void)
     }
 }
 ```
+
+<p align="center"><img alt=="AP572x - 25%" src="./pics/ap572x-25.png"></p>
+
+<p align="center"><img alt=="AP572x - 50%" src="./pics/ap572x-50.png"></p>
+
+<p align="center"><img alt=="AP572x - 75%" src="./pics/ap572x-75.png"></p>
+
+<p align="center"><img alt=="AP572x - 100%" src="./pics/ap572x-100.png"></p>
 
 ---
 DISCLAIMER: THIS CODE IS PROVIDED WITHOUT ANY WARRANTY OR GUARANTEES.
