--- a/modules/ap572x/ap572x.md
+++ b/modules/ap572x/ap572x.md
@@ -118,19 +118,19 @@ void main(void)
 }
 ```
 
-- AP572x - 25%.
+- AP572x - OVP 25%.
 
 <p align="center"><img alt=="AP572x - 25%" src="./pics/ap572x-25.png"></p>
 
-- AP572x - 50%.
+- AP572x - OVP 50%.
 
 <p align="center"><img alt=="AP572x - 50%" src="./pics/ap572x-50.png"></p>
 
-- AP572x - 75%.
+- AP572x - OVP 75%.
 
 <p align="center"><img alt=="AP572x - 75%" src="./pics/ap572x-75.png"></p>
 
-- AP572x - 100%.
+- AP572x - OVP 100%.
 
 <p align="center"><img alt=="AP572x - 100%" src="./pics/ap572x-100.png"></p>
 
