--- a/modules/cat4238/cat4238.md
+++ b/modules/cat4238/cat4238.md
@@ -118,19 +118,19 @@ void main(void)
 }
 ```
 
-- CAT4238 - OVP 25%.
+- CAT4238 - Vout 25%.
 
 <p align="center"><img alt=="CAT4238 - 25%" src="./pics/cat4238-25.png"></p>
 
-- CAT4238 - OVP 50%.
+- CAT4238 - Vout 50%.
 
 <p align="center"><img alt=="CAT4238 - 50%" src="./pics/cat4238-50.png"></p>
 
-- CAT4238 - OVP 75%.
+- CAT4238 - Vout 75%.
 
 <p align="center"><img alt=="CAT4238 - 75%" src="./pics/cat4238-75.png"></p>
 
-- CAT4238 - OVP 100%.
+- CAT4238 - Vout 100%.
 
 <p align="center"><img alt=="CAT4238 - 100%" src="./pics/cat4238-100.png"></p>
 
