--- a/modules/nhd-0420dz/pic16f177x.md
+++ b/modules/nhd-0420dz/pic16f177x.md
@@ -1,11 +1,13 @@
-# TODO - NHD-0420DZ-FL-YBW - ST7066U.
+# TODO - NHD-0420DZ - ST7066U.
 
-## Contents.
+## 0.Contents.
 
-- [1.PIC16F1778 - 8-Bit no Busy Flag.](#)
-- [2.PIC16F1778 - 8-Bit with Busy Flag.](#)
-- [3.PIC16F1778 - 4-Bit no Busy Flag.](#)
-- [4.PIC16F1778 - 4-Bit with Busy Flag.](#)
+- [1.PIC16F1778 - 8-Bit no Busy Flag.](#1pic16f1778---8-bit-no-busy-flag)
+- [2.PIC16F1778 - 8-Bit with Busy Flag.](#2pic16f1778---8-bit-with-busy-flag)
+- [3.PIC16F1778 - 4-Bit Low Nibble no Busy Flag.](#3pic16f1778---4-bit-low-nibble-no-busy-flag)
+- [4.PIC16F1778 - 4-Bit Low Nibble with Busy Flag.](#4pic16f1778---4-bit-low-nibble-with-busy-flag)
+- [5.PIC16F1778 - 4-Bit High Nibble no Busy Flag.](#5pic16f1778---4-bit-high-nibble-no-busy-flag)
+- [6.PIC16F1778 - 4-Bit High Nibble with Busy Flag.](#6pic16f1778---4-bit-high-nibble-with-busy-flag)
 
 ## 1.PIC16F1778 - 8-Bit no Busy Flag.
 
@@ -19,13 +21,25 @@
 
 ```
 
-## 3.PIC16F1778 - 4-Bit no Busy Flag.
+## 3.PIC16F1778 - 4-Bit Low Nibble no Busy Flag.
 
 ```c
 
 ```
 
-## 4.PIC16F1778 - 4-Bit with Busy Flag.
+## 4.PIC16F1778 - 4-Bit Low Nibble with Busy Flag.
+
+```c
+
+```
+
+## 5.PIC16F1778 - 4-Bit High Nibble no Busy Flag.
+
+```c
+
+```
+
+## 6.PIC16F1778 - 4-Bit High Nibble with Busy Flag.
 
 ```c
 
