--- a/modules/nhd-0420dz/pic16f177x.md
+++ b/modules/nhd-0420dz/pic16f177x.md
@@ -1363,7 +1363,7 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 // PIC16F1773/6/8 - @8MHz Internal Oscillator.
 // v0.1 - 11/2020.
 
-// LCD 4x20 - NHD-0420DZ (ST7066U - HD44780 Compatible) - 4-Bit Low Nibble no Busy Flag.
+// LCD 4x20 - NHD-0420DZ (ST7066U - HD44780 Compatible) - 4-Bit High Nibble no Busy Flag.
 
 // PIC8-Bit Trainer.
 // SDA - Open.
