--- a/modules/nhd-0420dz/pic16f177x.md
+++ b/modules/nhd-0420dz/pic16f177x.md
@@ -1,4 +1,4 @@
-# TODO - NHD-0420DZ - ST7066U.
+# DRAFT - NHD-0420DZ - ST7066U.
 
 ## 0.Contents.
 
@@ -85,6 +85,9 @@
 #define ST7066U_SET_DDRAM_ADDRESS_SECOND_LINE           0xC0
 #define ST7066U_SET_DDRAM_ADDRESS_THIRD_LINE            0x94
 #define ST7066U_SET_DDRAM_ADDRESS_FOURTH_LINE           0xD4
+#define ST7066U_INSTRUCTION_DELAY_US                    40
+#define ST7066U_CLEAR_DISPLAY_DELAY_MS                  2
+#define ST7066U_INITIALIZATION_DELAY_MS                 50
 // ASCII Characters.
 #define ASCII_SPACE                                     0x20
 // NHD-0420DZ Configuration.
@@ -105,11 +108,11 @@ void lcd_writeString(const uint8_t * u8Data);
 void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor);
 
 // Strings & Custom patterns.
-const uint8_t string0[] = "Tronix I/O";
-const uint8_t string1[] = "www.tronix.io";
-const uint8_t string2[] = "Custom patterns";
-const uint8_t separator[] = " - ";
-const uint8_t custom_patterns[5][8] = {
+const uint8_t au8Tronix[] = "Tronix I/O";
+const uint8_t au8WWW[] = "www.tronix.io";
+const uint8_t au8Custom[] = "Custom patterns";
+const uint8_t au8Separator[] = " - ";
+const uint8_t au8BatteryPattern[5][8] = {
     {0x0e, 0x1b, 0x11, 0x11, 0x11, 0x11, 0x11, 0x1f},
     {0x0e, 0x1b, 0x11, 0x11, 0x11, 0x1f, 0x1f, 0x1f},
     {0x0e, 0x1b, 0x11, 0x11, 0x1f, 0x1f, 0x1f, 0x1f},
@@ -170,14 +173,14 @@ void main(void)
     uint8_t pattern = 0;
     for(pattern=0; pattern<5; pattern++){
         for(line=0; line<8; line++){
-            lcd_writeData(custom_patterns[pattern][line]);
+            lcd_writeData(au8BatteryPattern[pattern][line]);
         }
     }
 
     // Display String.
-    lcd_writeStringSetCursor(string0, NHD0420DZ_CONFIGURATION_FIRST_LINE + 0x05);
-    lcd_writeStringSetCursor(string1, NHD0420DZ_CONFIGURATION_SECOND_LINE + 0x03);
-    lcd_writeStringSetCursor(string2, NHD0420DZ_CONFIGURATION_THIRD_LINE + 0x02);
+    lcd_writeStringSetCursor(au8Tronix, NHD0420DZ_CONFIGURATION_FIRST_LINE + 0x05);
+    lcd_writeStringSetCursor(au8WWW, NHD0420DZ_CONFIGURATION_SECOND_LINE + 0x03);
+    lcd_writeStringSetCursor(au8Custom, NHD0420DZ_CONFIGURATION_THIRD_LINE + 0x02);
 
     // Display Custom Patterns from ST7066U CGRAM.
     lcd_writeInstruction(NHD0420DZ_CONFIGURATION_FOURTH_LINE + 0x05);
@@ -186,7 +189,7 @@ void main(void)
     lcd_writeData(0x02);
     lcd_writeData(0x03);
     lcd_writeData(0x04);
-    lcd_writeString(separator);
+    lcd_writeString(au8Separator);
 
     while(1){
         for(pattern=0; pattern<5; pattern++){
@@ -201,7 +204,7 @@ void main(void)
 void lcd_clearDisplay(void)
 {
     lcd_writeInstruction(ST7066U_CLEAR_DISPLAY);
-    __delay_ms(2);
+    __delay_ms(ST7066U_CLEAR_DISPLAY_DELAY_MS);
 }
 
 void lcd_clearLine(uint8_t u8Line)
@@ -216,13 +219,13 @@ void lcd_clearLine(uint8_t u8Line)
 
 void lcd_initialize(void)
 {
-    __delay_ms(50);
+    __delay_ms(ST7066U_INITIALIZATION_DELAY_MS);
     lcd_writeInstruction(ST7066U_FUNCTION_SET_8_BIT_TWO_LINE_FONT5x8);
     lcd_writeInstruction(ST7066U_FUNCTION_SET_8_BIT_TWO_LINE_FONT5x8);
     lcd_writeInstruction(ST7066U_DISPLAY_ON_CURSOR_OFF);
     lcd_writeInstruction(ST7066U_ENTRY_MODE_DDRAM_INCREMENT_NOSHIFT);
     lcd_writeInstruction(ST7066U_CLEAR_DISPLAY);
-    __delay_ms(2);
+    __delay_ms(ST7066U_CLEAR_DISPLAY_DELAY_MS);
 }
 
 void lcd_writeData(uint8_t u8Data)
@@ -231,7 +234,7 @@ void lcd_writeData(uint8_t u8Data)
     ST7066U_E;
     ST7066U_DATA = u8Data;
     ST7066U_nE;
-    __delay_us(40);
+    __delay_us(ST7066U_INSTRUCTION_DELAY_US);
 }
 
 void lcd_writeInstruction(uint8_t u8Data)
@@ -240,7 +243,7 @@ void lcd_writeInstruction(uint8_t u8Data)
     ST7066U_E;
     ST7066U_DATA = u8Data;
     ST7066U_nE;
-    __delay_us(40);
+    __delay_us(ST7066U_INSTRUCTION_DELAY_US);
 }
 
 void lcd_writeString(const uint8_t * u8Data)
@@ -338,6 +341,9 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 #define ST7066U_SET_DDRAM_ADDRESS_SECOND_LINE           0xC0
 #define ST7066U_SET_DDRAM_ADDRESS_THIRD_LINE            0x94
 #define ST7066U_SET_DDRAM_ADDRESS_FOURTH_LINE           0xD4
+#define ST7066U_INSTRUCTION_DELAY_US                    40
+#define ST7066U_CLEAR_DISPLAY_DELAY_MS                  2
+#define ST7066U_INITIALIZATION_DELAY_MS                 50
 // ASCII Characters.
 #define ASCII_SPACE                                     0x20
 // NHD-0420DZ Configuration.
@@ -360,11 +366,11 @@ void lcd_writeString(const uint8_t * u8Data);
 void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor);
 
 // Strings & Custom patterns.
-const uint8_t string0[] = "Tronix I/O";
-const uint8_t string1[] = "www.tronix.io";
-const uint8_t string2[] = "Custom patterns";
-const uint8_t separator[] = " - ";
-const uint8_t custom_patterns[5][8] = {
+const uint8_t au8Tronix[] = "Tronix I/O";
+const uint8_t au8WWW[] = "www.tronix.io";
+const uint8_t au8Custom[] = "Custom patterns";
+const uint8_t au8Separator[] = " - ";
+const uint8_t au8BatteryPattern[5][8] = {
     {0x0e, 0x1b, 0x11, 0x11, 0x11, 0x11, 0x11, 0x1f},
     {0x0e, 0x1b, 0x11, 0x11, 0x11, 0x1f, 0x1f, 0x1f},
     {0x0e, 0x1b, 0x11, 0x11, 0x1f, 0x1f, 0x1f, 0x1f},
@@ -425,14 +431,14 @@ void main(void)
     uint8_t pattern = 0;
     for(pattern=0; pattern<5; pattern++){
         for(line=0; line<8; line++){
-            lcd_writeData(custom_patterns[pattern][line]);
+            lcd_writeData(au8BatteryPattern[pattern][line]);
         }
     }
 
     // Display String.
-    lcd_writeStringSetCursor(string0, NHD0420DZ_CONFIGURATION_FIRST_LINE + 0x05);
-    lcd_writeStringSetCursor(string1, NHD0420DZ_CONFIGURATION_SECOND_LINE + 0x03);
-    lcd_writeStringSetCursor(string2, NHD0420DZ_CONFIGURATION_THIRD_LINE + 0x02);
+    lcd_writeStringSetCursor(au8Tronix, NHD0420DZ_CONFIGURATION_FIRST_LINE + 0x05);
+    lcd_writeStringSetCursor(au8WWW, NHD0420DZ_CONFIGURATION_SECOND_LINE + 0x03);
+    lcd_writeStringSetCursor(au8Custom, NHD0420DZ_CONFIGURATION_THIRD_LINE + 0x02);
 
     // Display Custom Patterns from ST7066U CGRAM.
     lcd_writeInstruction(NHD0420DZ_CONFIGURATION_FOURTH_LINE + 0x05);
@@ -441,7 +447,7 @@ void main(void)
     lcd_writeData(0x02);
     lcd_writeData(0x03);
     lcd_writeData(0x04);
-    lcd_writeString(separator);
+    lcd_writeString(au8Separator);
 
     while(1){
         for(pattern=0; pattern<5; pattern++){
@@ -456,7 +462,7 @@ void main(void)
 void lcd_clearDisplay(void)
 {
     lcd_writeInstruction(ST7066U_CLEAR_DISPLAY);
-    __delay_ms(2);
+    __delay_ms(ST7066U_CLEAR_DISPLAY_DELAY_MS);
 }
 
 void lcd_clearLine(uint8_t u8Line)
@@ -471,13 +477,13 @@ void lcd_clearLine(uint8_t u8Line)
 
 void lcd_initialize(void)
 {
-    __delay_ms(50);
+    __delay_ms(ST7066U_INITIALIZATION_DELAY_MS);
     lcd_writeInstructionNOBF(ST7066U_FUNCTION_SET_8_BIT_TWO_LINE_FONT5x8);
     lcd_writeInstructionNOBF(ST7066U_FUNCTION_SET_8_BIT_TWO_LINE_FONT5x8);
     lcd_writeInstruction(ST7066U_DISPLAY_ON_CURSOR_OFF);
     lcd_writeInstruction(ST7066U_ENTRY_MODE_DDRAM_INCREMENT_NOSHIFT);
     lcd_writeInstruction(ST7066U_CLEAR_DISPLAY);
-    __delay_ms(2);
+    __delay_ms(ST7066U_CLEAR_DISPLAY_DELAY_MS);
 }
 
 void lcd_readBusyFlag(void)
@@ -517,7 +523,7 @@ void lcd_writeInstructionNOBF(uint8_t u8Data)
     ST7066U_E;
     ST7066U_DATA = u8Data;
     ST7066U_nE;
-    __delay_us(40);
+    __delay_us(ST7066U_INSTRUCTION_DELAY_US);
 }
 
 void lcd_writeString(const uint8_t * u8Data)
@@ -610,6 +616,9 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 #define ST7066U_SET_DDRAM_ADDRESS_SECOND_LINE           0xC0
 #define ST7066U_SET_DDRAM_ADDRESS_THIRD_LINE            0x94
 #define ST7066U_SET_DDRAM_ADDRESS_FOURTH_LINE           0xD4
+#define ST7066U_INSTRUCTION_DELAY_US                    40
+#define ST7066U_CLEAR_DISPLAY_DELAY_MS                  2
+#define ST7066U_INITIALIZATION_DELAY_MS                 50
 // ASCII Characters.
 #define ASCII_SPACE                                     0x20
 // NHD-0420DZ Configuration.
@@ -630,11 +639,11 @@ void lcd_writeString(const uint8_t * u8Data);
 void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor);
 
 // Strings & Custom patterns.
-const uint8_t string0[] = "Tronix I/O";
-const uint8_t string1[] = "www.tronix.io";
-const uint8_t string2[] = "Custom patterns";
-const uint8_t separator[] = " - ";
-const uint8_t custom_patterns[5][8] = {
+const uint8_t au8Tronix[] = "Tronix I/O";
+const uint8_t au8WWW[] = "www.tronix.io";
+const uint8_t au8Custom[] = "Custom patterns";
+const uint8_t au8Separator[] = " - ";
+const uint8_t au8BatteryPattern[5][8] = {
     {0x0e, 0x1b, 0x11, 0x11, 0x11, 0x11, 0x11, 0x1f},
     {0x0e, 0x1b, 0x11, 0x11, 0x11, 0x1f, 0x1f, 0x1f},
     {0x0e, 0x1b, 0x11, 0x11, 0x1f, 0x1f, 0x1f, 0x1f},
@@ -695,14 +704,14 @@ void main(void)
     uint8_t pattern = 0;
     for(pattern=0; pattern<5; pattern++){
         for(line=0; line<8; line++){
-            lcd_writeData(custom_patterns[pattern][line]);
+            lcd_writeData(au8BatteryPattern[pattern][line]);
         }
     }
 
     // Display String.
-    lcd_writeStringSetCursor(string0, NHD0420DZ_CONFIGURATION_FIRST_LINE + 0x05);
-    lcd_writeStringSetCursor(string1, NHD0420DZ_CONFIGURATION_SECOND_LINE + 0x03);
-    lcd_writeStringSetCursor(string2, NHD0420DZ_CONFIGURATION_THIRD_LINE + 0x02);
+    lcd_writeStringSetCursor(au8Tronix, NHD0420DZ_CONFIGURATION_FIRST_LINE + 0x05);
+    lcd_writeStringSetCursor(au8WWW, NHD0420DZ_CONFIGURATION_SECOND_LINE + 0x03);
+    lcd_writeStringSetCursor(au8Custom, NHD0420DZ_CONFIGURATION_THIRD_LINE + 0x02);
 
     // Display Custom Patterns from ST7066U CGRAM.
     lcd_writeInstruction(NHD0420DZ_CONFIGURATION_FOURTH_LINE + 0x05);
@@ -711,7 +720,7 @@ void main(void)
     lcd_writeData(0x02);
     lcd_writeData(0x03);
     lcd_writeData(0x04);
-    lcd_writeString(separator);
+    lcd_writeString(au8Separator);
 
     while(1){
         for(pattern=0; pattern<5; pattern++){
@@ -726,7 +735,7 @@ void main(void)
 void lcd_clearDisplay(void)
 {
     lcd_writeInstruction(ST7066U_CLEAR_DISPLAY);
-    __delay_ms(2);
+    __delay_ms(ST7066U_CLEAR_DISPLAY_DELAY_MS);
 }
 
 void lcd_clearLine(uint8_t u8Line)
@@ -741,14 +750,14 @@ void lcd_clearLine(uint8_t u8Line)
 
 void lcd_initialize(void)
 {
-    __delay_ms(50);
+    __delay_ms(ST7066U_INITIALIZATION_DELAY_MS);
     lcd_writeInstruction(ST7066U_FUNCTION_SET_8_BIT_TWO_LINE_FONT5x8);
     lcd_writeInstruction(ST7066U_FUNCTION_SET_4_BIT_TWO_LINE_FONT5x8);
     lcd_writeInstruction(ST7066U_FUNCTION_SET_4_BIT_TWO_LINE_FONT5x8);
     lcd_writeInstruction(ST7066U_DISPLAY_ON_CURSOR_OFF);
     lcd_writeInstruction(ST7066U_ENTRY_MODE_DDRAM_INCREMENT_NOSHIFT);
     lcd_writeInstruction(ST7066U_CLEAR_DISPLAY);
-    __delay_ms(2);
+    __delay_ms(ST7066U_CLEAR_DISPLAY_DELAY_MS);
 }
 
 void lcd_writeData(uint8_t u8Data)
@@ -762,7 +771,7 @@ void lcd_writeData(uint8_t u8Data)
     ST7066U_E;
     ST7066U_DATA |= (u8Data & 0x0F);
     ST7066U_nE;
-    __delay_us(40);
+    __delay_us(ST7066U_INSTRUCTION_DELAY_US);
 }
 
 void lcd_writeInstruction(uint8_t u8Data)
@@ -776,7 +785,7 @@ void lcd_writeInstruction(uint8_t u8Data)
     ST7066U_E;
     ST7066U_DATA |= (u8Data & 0x0F);
     ST7066U_nE;
-    __delay_us(40);
+    __delay_us(ST7066U_INSTRUCTION_DELAY_US);
 }
 
 void lcd_writeString(const uint8_t * u8Data)
@@ -875,6 +884,9 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 #define ST7066U_SET_DDRAM_ADDRESS_SECOND_LINE           0xC0
 #define ST7066U_SET_DDRAM_ADDRESS_THIRD_LINE            0x94
 #define ST7066U_SET_DDRAM_ADDRESS_FOURTH_LINE           0xD4
+#define ST7066U_INSTRUCTION_DELAY_US                    40
+#define ST7066U_CLEAR_DISPLAY_DELAY_MS                  2
+#define ST7066U_INITIALIZATION_DELAY_MS                 50
 // ASCII Characters.
 #define ASCII_SPACE                                     0x20
 // NHD-0420DZ Configuration.
@@ -897,11 +909,11 @@ void lcd_writeString(const uint8_t * u8Data);
 void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor);
 
 // Strings & Custom patterns.
-const uint8_t string0[] = "Tronix I/O";
-const uint8_t string1[] = "www.tronix.io";
-const uint8_t string2[] = "Custom patterns";
-const uint8_t separator[] = " - ";
-const uint8_t custom_patterns[5][8] = {
+const uint8_t au8Tronix[] = "Tronix I/O";
+const uint8_t au8WWW[] = "www.tronix.io";
+const uint8_t au8Custom[] = "Custom patterns";
+const uint8_t au8Separator[] = " - ";
+const uint8_t au8BatteryPattern[5][8] = {
     {0x0e, 0x1b, 0x11, 0x11, 0x11, 0x11, 0x11, 0x1f},
     {0x0e, 0x1b, 0x11, 0x11, 0x11, 0x1f, 0x1f, 0x1f},
     {0x0e, 0x1b, 0x11, 0x11, 0x1f, 0x1f, 0x1f, 0x1f},
@@ -962,14 +974,14 @@ void main(void)
     uint8_t pattern = 0;
     for(pattern=0; pattern<5; pattern++){
         for(line=0; line<8; line++){
-            lcd_writeData(custom_patterns[pattern][line]);
+            lcd_writeData(au8BatteryPattern[pattern][line]);
         }
     }
 
     // Display String.
-    lcd_writeStringSetCursor(string0, NHD0420DZ_CONFIGURATION_FIRST_LINE + 0x05);
-    lcd_writeStringSetCursor(string1, NHD0420DZ_CONFIGURATION_SECOND_LINE + 0x03);
-    lcd_writeStringSetCursor(string2, NHD0420DZ_CONFIGURATION_THIRD_LINE + 0x02);
+    lcd_writeStringSetCursor(au8Tronix, NHD0420DZ_CONFIGURATION_FIRST_LINE + 0x05);
+    lcd_writeStringSetCursor(au8WWW, NHD0420DZ_CONFIGURATION_SECOND_LINE + 0x03);
+    lcd_writeStringSetCursor(au8Custom, NHD0420DZ_CONFIGURATION_THIRD_LINE + 0x02);
 
     // Display Custom Patterns from ST7066U CGRAM.
     lcd_writeInstruction(NHD0420DZ_CONFIGURATION_FOURTH_LINE + 0x05);
@@ -978,7 +990,7 @@ void main(void)
     lcd_writeData(0x02);
     lcd_writeData(0x03);
     lcd_writeData(0x04);
-    lcd_writeString(separator);
+    lcd_writeString(au8Separator);
 
     while(1){
         for(pattern=0; pattern<5; pattern++){
@@ -993,7 +1005,7 @@ void main(void)
 void lcd_clearDisplay(void)
 {
     lcd_writeInstruction(ST7066U_CLEAR_DISPLAY);
-    __delay_ms(2);
+    __delay_ms(ST7066U_CLEAR_DISPLAY_DELAY_MS);
 }
 
 void lcd_clearLine(uint8_t u8Line)
@@ -1008,14 +1020,14 @@ void lcd_clearLine(uint8_t u8Line)
 
 void lcd_initialize(void)
 {
-    __delay_ms(50);
+    __delay_ms(ST7066U_INITIALIZATION_DELAY_MS);
     lcd_writeInstructionNOBF(ST7066U_FUNCTION_SET_8_BIT_ONCE);
     lcd_writeInstructionNOBF(ST7066U_FUNCTION_SET_4_BIT_TWO_LINE_FONT5x8);
     lcd_writeInstructionNOBF(ST7066U_FUNCTION_SET_4_BIT_TWO_LINE_FONT5x8);
     lcd_writeInstruction(ST7066U_DISPLAY_ON_CURSOR_OFF);
     lcd_writeInstruction(ST7066U_ENTRY_MODE_DDRAM_INCREMENT_NOSHIFT);
     lcd_writeInstruction(ST7066U_CLEAR_DISPLAY);
-    __delay_ms(2);
+    __delay_ms(ST7066U_CLEAR_DISPLAY_DELAY_MS);
 }
 
 void lcd_readBusyFlag(void)
@@ -1071,7 +1083,7 @@ void lcd_writeInstructionNOBF(uint8_t u8Data)
     ST7066U_E;
     ST7066U_DATA |= (u8Data & 0x0F);
     ST7066U_nE;
-    __delay_us(40);
+    __delay_us(ST7066U_INSTRUCTION_DELAY_US);
 }
 
 void lcd_writeString(const uint8_t * u8Data)
@@ -1164,6 +1176,9 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 #define ST7066U_SET_DDRAM_ADDRESS_SECOND_LINE           0xC0
 #define ST7066U_SET_DDRAM_ADDRESS_THIRD_LINE            0x94
 #define ST7066U_SET_DDRAM_ADDRESS_FOURTH_LINE           0xD4
+#define ST7066U_INSTRUCTION_DELAY_US                    40
+#define ST7066U_CLEAR_DISPLAY_DELAY_MS                  2
+#define ST7066U_INITIALIZATION_DELAY_MS                 50
 // ASCII Characters.
 #define ASCII_SPACE                                     0x20
 // NHD-0420DZ Configuration.
@@ -1184,11 +1199,11 @@ void lcd_writeString(const uint8_t * u8Data);
 void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor);
 
 // Strings & Custom patterns.
-const uint8_t string0[] = "Tronix I/O";
-const uint8_t string1[] = "www.tronix.io";
-const uint8_t string2[] = "Custom patterns";
-const uint8_t separator[] = " - ";
-const uint8_t custom_patterns[5][8] = {
+const uint8_t au8Tronix[] = "Tronix I/O";
+const uint8_t au8WWW[] = "www.tronix.io";
+const uint8_t au8Custom[] = "Custom patterns";
+const uint8_t au8Separator[] = " - ";
+const uint8_t au8BatteryPattern[5][8] = {
     {0x0e, 0x1b, 0x11, 0x11, 0x11, 0x11, 0x11, 0x1f},
     {0x0e, 0x1b, 0x11, 0x11, 0x11, 0x1f, 0x1f, 0x1f},
     {0x0e, 0x1b, 0x11, 0x11, 0x1f, 0x1f, 0x1f, 0x1f},
@@ -1249,14 +1264,14 @@ void main(void)
     uint8_t pattern = 0;
     for(pattern=0; pattern<5; pattern++){
         for(line=0; line<8; line++){
-            lcd_writeData(custom_patterns[pattern][line]);
+            lcd_writeData(au8BatteryPattern[pattern][line]);
         }
     }
 
     // Display String.
-    lcd_writeStringSetCursor(string0, NHD0420DZ_CONFIGURATION_FIRST_LINE + 0x05);
-    lcd_writeStringSetCursor(string1, NHD0420DZ_CONFIGURATION_SECOND_LINE + 0x03);
-    lcd_writeStringSetCursor(string2, NHD0420DZ_CONFIGURATION_THIRD_LINE + 0x02);
+    lcd_writeStringSetCursor(au8Tronix, NHD0420DZ_CONFIGURATION_FIRST_LINE + 0x05);
+    lcd_writeStringSetCursor(au8WWW, NHD0420DZ_CONFIGURATION_SECOND_LINE + 0x03);
+    lcd_writeStringSetCursor(au8Custom, NHD0420DZ_CONFIGURATION_THIRD_LINE + 0x02);
 
     // Display Custom Patterns from ST7066U CGRAM.
     lcd_writeInstruction(NHD0420DZ_CONFIGURATION_FOURTH_LINE + 0x05);
@@ -1265,7 +1280,7 @@ void main(void)
     lcd_writeData(0x02);
     lcd_writeData(0x03);
     lcd_writeData(0x04);
-    lcd_writeString(separator);
+    lcd_writeString(au8Separator);
 
     while(1){
         for(pattern=0; pattern<5; pattern++){
@@ -1280,7 +1295,7 @@ void main(void)
 void lcd_clearDisplay(void)
 {
     lcd_writeInstruction(ST7066U_CLEAR_DISPLAY);
-    __delay_ms(2);
+    __delay_ms(ST7066U_CLEAR_DISPLAY_DELAY_MS);
 }
 
 void lcd_clearLine(uint8_t u8Line)
@@ -1295,14 +1310,14 @@ void lcd_clearLine(uint8_t u8Line)
 
 void lcd_initialize(void)
 {
-    __delay_ms(50);
+    __delay_ms(ST7066U_INITIALIZATION_DELAY_MS);
     lcd_writeInstruction(ST7066U_FUNCTION_SET_8_BIT_TWO_LINE_FONT5x8);
     lcd_writeInstruction(ST7066U_FUNCTION_SET_4_BIT_TWO_LINE_FONT5x8);
     lcd_writeInstruction(ST7066U_FUNCTION_SET_4_BIT_TWO_LINE_FONT5x8);
     lcd_writeInstruction(ST7066U_DISPLAY_ON_CURSOR_OFF);
     lcd_writeInstruction(ST7066U_ENTRY_MODE_DDRAM_INCREMENT_NOSHIFT);
     lcd_writeInstruction(ST7066U_CLEAR_DISPLAY);
-    __delay_ms(2);
+    __delay_ms(ST7066U_CLEAR_DISPLAY_DELAY_MS);
 }
 
 void lcd_writeData(uint8_t u8Data)
@@ -1316,7 +1331,7 @@ void lcd_writeData(uint8_t u8Data)
     ST7066U_E;
     ST7066U_DATA |= ((u8Data<<4) & 0xF0);
     ST7066U_nE;
-    __delay_us(40);
+    __delay_us(ST7066U_INSTRUCTION_DELAY_US);
 }
 
 void lcd_writeInstruction(uint8_t u8Data)
@@ -1330,7 +1345,7 @@ void lcd_writeInstruction(uint8_t u8Data)
     ST7066U_E;
     ST7066U_DATA |= ((u8Data<<4) & 0xF0);
     ST7066U_nE;
-    __delay_us(40);
+    __delay_us(ST7066U_INSTRUCTION_DELAY_US);
 }
 
 void lcd_writeString(const uint8_t * u8Data)
@@ -1429,6 +1444,9 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 #define ST7066U_SET_DDRAM_ADDRESS_SECOND_LINE           0xC0
 #define ST7066U_SET_DDRAM_ADDRESS_THIRD_LINE            0x94
 #define ST7066U_SET_DDRAM_ADDRESS_FOURTH_LINE           0xD4
+#define ST7066U_INSTRUCTION_DELAY_US                    40
+#define ST7066U_CLEAR_DISPLAY_DELAY_MS                  2
+#define ST7066U_INITIALIZATION_DELAY_MS                 50
 // ASCII Characters.
 #define ASCII_SPACE                                     0x20
 // NHD-0420DZ Configuration.
@@ -1451,11 +1469,11 @@ void lcd_writeString(const uint8_t * u8Data);
 void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor);
 
 // Strings & Custom patterns.
-const uint8_t string0[] = "Tronix I/O";
-const uint8_t string1[] = "www.tronix.io";
-const uint8_t string2[] = "Custom patterns";
-const uint8_t separator[] = " - ";
-const uint8_t custom_patterns[5][8] = {
+const uint8_t au8Tronix[] = "Tronix I/O";
+const uint8_t au8WWW[] = "www.tronix.io";
+const uint8_t au8Custom[] = "Custom patterns";
+const uint8_t au8Separator[] = " - ";
+const uint8_t au8BatteryPattern[5][8] = {
     {0x0e, 0x1b, 0x11, 0x11, 0x11, 0x11, 0x11, 0x1f},
     {0x0e, 0x1b, 0x11, 0x11, 0x11, 0x1f, 0x1f, 0x1f},
     {0x0e, 0x1b, 0x11, 0x11, 0x1f, 0x1f, 0x1f, 0x1f},
@@ -1516,14 +1534,14 @@ void main(void)
     uint8_t pattern = 0;
     for(pattern=0; pattern<5; pattern++){
         for(line=0; line<8; line++){
-            lcd_writeData(custom_patterns[pattern][line]);
+            lcd_writeData(au8BatteryPattern[pattern][line]);
         }
     }
 
     // Display String.
-    lcd_writeStringSetCursor(string0, NHD0420DZ_CONFIGURATION_FIRST_LINE + 0x05);
-    lcd_writeStringSetCursor(string1, NHD0420DZ_CONFIGURATION_SECOND_LINE + 0x03);
-    lcd_writeStringSetCursor(string2, NHD0420DZ_CONFIGURATION_THIRD_LINE + 0x02);
+    lcd_writeStringSetCursor(au8Tronix, NHD0420DZ_CONFIGURATION_FIRST_LINE + 0x05);
+    lcd_writeStringSetCursor(au8WWW, NHD0420DZ_CONFIGURATION_SECOND_LINE + 0x03);
+    lcd_writeStringSetCursor(au8Custom, NHD0420DZ_CONFIGURATION_THIRD_LINE + 0x02);
 
     // Display Custom Patterns from ST7066U CGRAM.
     lcd_writeInstruction(NHD0420DZ_CONFIGURATION_FOURTH_LINE + 0x05);
@@ -1532,7 +1550,7 @@ void main(void)
     lcd_writeData(0x02);
     lcd_writeData(0x03);
     lcd_writeData(0x04);
-    lcd_writeString(separator);
+    lcd_writeString(au8Separator);
 
     while(1){
         for(pattern=0; pattern<5; pattern++){
@@ -1547,7 +1565,7 @@ void main(void)
 void lcd_clearDisplay(void)
 {
     lcd_writeInstruction(ST7066U_CLEAR_DISPLAY);
-    __delay_ms(2);
+    __delay_ms(ST7066U_CLEAR_DISPLAY_DELAY_MS);
 }
 
 void lcd_clearLine(uint8_t u8Line)
@@ -1562,14 +1580,14 @@ void lcd_clearLine(uint8_t u8Line)
 
 void lcd_initialize(void)
 {
-    __delay_ms(50);
+    __delay_ms(ST7066U_INITIALIZATION_DELAY_MS);
     lcd_writeInstructionNOBF(ST7066U_FUNCTION_SET_8_BIT_ONCE);
     lcd_writeInstructionNOBF(ST7066U_FUNCTION_SET_4_BIT_TWO_LINE_FONT5x8);
     lcd_writeInstructionNOBF(ST7066U_FUNCTION_SET_4_BIT_TWO_LINE_FONT5x8);
     lcd_writeInstruction(ST7066U_DISPLAY_ON_CURSOR_OFF);
     lcd_writeInstruction(ST7066U_ENTRY_MODE_DDRAM_INCREMENT_NOSHIFT);
     lcd_writeInstruction(ST7066U_CLEAR_DISPLAY);
-    __delay_ms(2);
+    __delay_ms(ST7066U_CLEAR_DISPLAY_DELAY_MS);
 }
 
 void lcd_readBusyFlag(void)
@@ -1625,7 +1643,7 @@ void lcd_writeInstructionNOBF(uint8_t u8Data)
     ST7066U_E;
     ST7066U_DATA |= ((u8Data<<4) & 0xF0);
     ST7066U_nE;
-    __delay_us(40);
+    __delay_us(ST7066U_INSTRUCTION_DELAY_US);
 }
 
 void lcd_writeString(const uint8_t * u8Data)
