--- a/modules/nhd-0420dz/pic16f177x.md
+++ b/modules/nhd-0420dz/pic16f177x.md
@@ -2,14 +2,14 @@
 
 ## 0.Contents.
 
-- [1.DRAFT-PIC16F1778 - 8-Bit no Busy Flag.](#1pic16f1778---8-bit-no-busy-flag)
-- [2.DRAFT-PIC16F1778 - 8-Bit with Busy Flag.](#2pic16f1778---8-bit-with-busy-flag)
-- [3.DRAFT-PIC16F1778 - 4-Bit Low Nibble no Busy Flag.](#3pic16f1778---4-bit-low-nibble-no-busy-flag)
-- [4.DRAFT-PIC16F1778 - 4-Bit Low Nibble with Busy Flag.](#4pic16f1778---4-bit-low-nibble-with-busy-flag)
-- [5.DRAFT-PIC16F1778 - 4-Bit High Nibble no Busy Flag.](#5pic16f1778---4-bit-high-nibble-no-busy-flag)
-- [6.DRAFT-PIC16F1778 - 4-Bit High Nibble with Busy Flag.](#6pic16f1778---4-bit-high-nibble-with-busy-flag)
+- [1.PIC16F1778 - 8-Bit no Busy Flag.](#1pic16f1778---8-bit-no-busy-flag)
+- [2.PIC16F1778 - 8-Bit with Busy Flag.](#2pic16f1778---8-bit-with-busy-flag)
+- [3.PIC16F1778 - 4-Bit Low Nibble no Busy Flag.](#3pic16f1778---4-bit-low-nibble-no-busy-flag)
+- [4.PIC16F1778 - 4-Bit Low Nibble with Busy Flag.](#4pic16f1778---4-bit-low-nibble-with-busy-flag)
+- [5.PIC16F1778 - 4-Bit High Nibble no Busy Flag.](#5pic16f1778---4-bit-high-nibble-no-busy-flag)
+- [6.PIC16F1778 - 4-Bit High Nibble with Busy Flag.](#6pic16f1778---4-bit-high-nibble-with-busy-flag)
 
-## 1.DRAFT-PIC16F1778 - 8-Bit no Busy Flag.
+## 1.PIC16F1778 - 8-Bit no Busy Flag.
 
 ```c
 // Configuration Registers.
@@ -30,9 +30,9 @@
 // PIC8-Bit Trainer.
 // SDA - Open.
 // SCL - Open.
-// VCAP - Open.
 // VEE - Close.
 // BCKL - Close.
+// VCAP - Open.
 
 // Pinout.
 // MODULE.01 -> GND.
@@ -260,7 +260,7 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 }
 ```
 
-## 2.DRAFT-PIC16F1778 - 8-Bit with Busy Flag.
+## 2.PIC16F1778 - 8-Bit with Busy Flag.
 
 ```c
 // Configuration Registers.
@@ -281,9 +281,9 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 // PIC8-Bit Trainer.
 // SDA - Open.
 // SCL - Open.
-// VCAP - Open.
 // VEE - Close.
 // BCKL - Close.
+// VCAP - Open.
 
 // Pinout.
 // MODULE.01 -> GND.
@@ -540,7 +540,7 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 }
 ```
 
-## 3.DRAFT-PIC16F1778 - 4-Bit Low Nibble no Busy Flag.
+## 3.PIC16F1778 - 4-Bit Low Nibble no Busy Flag.
 
 ```c
 // Configuration Registers.
@@ -561,9 +561,9 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 // PIC8-Bit Trainer.
 // SDA - Open.
 // SCL - Open.
-// VCAP - Open.
 // VEE - Close.
 // BCKL - Close.
+// VCAP - Open.
 
 // Pinout.
 // MODULE.01 -> GND.
@@ -802,7 +802,7 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 }
 ```
 
-## 4.DRAFT-PIC16F1778 - 4-Bit Low Nibble with Busy Flag.
+## 4.PIC16F1778 - 4-Bit Low Nibble with Busy Flag.
 
 ```c
 // Configuration Registers.
@@ -823,9 +823,9 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 // PIC8-Bit Trainer.
 // SDA - Open.
 // SCL - Open.
-// VCAP - Open.
 // VEE - Close.
 // BCKL - Close.
+// VCAP - Open.
 
 // Pinout.
 // MODULE.01 -> GND.
@@ -1035,7 +1035,7 @@ void lcd_readBusyFlag(void)
     ST7066U_nRS;
     ST7066U_RW;
     ST7066U_BF_INPUT;
-    __delay_us(5);
+    __delay_us(10);
     do{
         ST7066U_nE;
         ST7066U_E;
@@ -1100,7 +1100,7 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 }
 ```
 
-## 5.DRAFT-PIC16F1778 - 4-Bit High Nibble no Busy Flag.
+## 5.PIC16F1778 - 4-Bit High Nibble no Busy Flag.
 
 ```c
 // Configuration Registers.
@@ -1121,9 +1121,9 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 // PIC8-Bit Trainer.
 // SDA - Open.
 // SCL - Open.
-// VCAP - Open.
 // VEE - Close.
 // BCKL - Close.
+// VCAP - Open.
 
 // Pinout.
 // MODULE.01 -> GND.
@@ -1362,7 +1362,7 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 }
 ```
 
-## 6.DRAFT-PIC16F1778 - 4-Bit High Nibble with Busy Flag.
+## 6.PIC16F1778 - 4-Bit High Nibble with Busy Flag.
 
 ```c
 // Configuration Registers.
@@ -1378,14 +1378,14 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 // PIC16F1773/6/8 - @8MHz Internal Oscillator.
 // v0.1 - 11/2020.
 
-// LCD 4x20 - NHD-0420DZ (ST7066U - HD44780 Compatible) - 4-Bit High Nibble no Busy Flag.
+// LCD 4x20 - NHD-0420DZ (ST7066U - HD44780 Compatible) - 4-Bit High Nibble with Busy Flag.
 
 // PIC8-Bit Trainer.
 // SDA - Open.
 // SCL - Open.
-// VCAP - Open.
 // VEE - Close.
 // BCKL - Close.
+// VCAP - Open.
 
 // Pinout.
 // MODULE.01 -> GND.
@@ -1595,7 +1595,7 @@ void lcd_readBusyFlag(void)
     ST7066U_nRS;
     ST7066U_RW;
     ST7066U_BF_INPUT;
-    __delay_us(5);
+    __delay_us(10);
     do{
         ST7066U_nE;
         ST7066U_E;
