--- a/modules/nhd-0420dz/pic16f177x.md
+++ b/modules/nhd-0420dz/pic16f177x.md
@@ -609,6 +609,7 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 #define ST7066U_FUNCTION_SET_4_BIT_ONE_LINE_FONT5x11    0x24
 #define ST7066U_FUNCTION_SET_4_BIT_TWO_LINE_FONT5x8     0x28
 #define ST7066U_FUNCTION_SET_8_BIT_ONE_LINE_FONT5x8     0x30
+#define ST7066U_FUNCTION_SET_8_BIT_ONCE                 0x33
 #define ST7066U_FUNCTION_SET_8_BIT_ONE_LINE_FONT5x11    0x34
 #define ST7066U_FUNCTION_SET_8_BIT_TWO_LINE_FONT5x8     0x38
 #define ST7066U_SET_CGRAM_ADDRESS                       0x40
@@ -751,7 +752,7 @@ void lcd_clearLine(uint8_t u8Line)
 void lcd_initialize(void)
 {
     __delay_ms(ST7066U_INITIALIZATION_DELAY_MS);
-    lcd_writeInstruction(ST7066U_FUNCTION_SET_8_BIT_TWO_LINE_FONT5x8);
+    lcd_writeInstruction(ST7066U_FUNCTION_SET_8_BIT_ONCE);
     lcd_writeInstruction(ST7066U_FUNCTION_SET_4_BIT_TWO_LINE_FONT5x8);
     lcd_writeInstruction(ST7066U_FUNCTION_SET_4_BIT_TWO_LINE_FONT5x8);
     lcd_writeInstruction(ST7066U_DISPLAY_ON_CURSOR_OFF);
@@ -1035,7 +1036,7 @@ void lcd_readBusyFlag(void)
     ST7066U_nRS;
     ST7066U_RW;
     ST7066U_BF_INPUT;
-    __delay_us(10);
+    __delay_us(ST7066U_BUSY_FLAG_DELAY_US);
     do{
         ST7066U_nE;
         ST7066U_E;
@@ -1169,6 +1170,7 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 #define ST7066U_FUNCTION_SET_4_BIT_ONE_LINE_FONT5x11    0x24
 #define ST7066U_FUNCTION_SET_4_BIT_TWO_LINE_FONT5x8     0x28
 #define ST7066U_FUNCTION_SET_8_BIT_ONE_LINE_FONT5x8     0x30
+#define ST7066U_FUNCTION_SET_8_BIT_ONCE                 0x33
 #define ST7066U_FUNCTION_SET_8_BIT_ONE_LINE_FONT5x11    0x34
 #define ST7066U_FUNCTION_SET_8_BIT_TWO_LINE_FONT5x8     0x38
 #define ST7066U_SET_CGRAM_ADDRESS                       0x40
@@ -1311,7 +1313,7 @@ void lcd_clearLine(uint8_t u8Line)
 void lcd_initialize(void)
 {
     __delay_ms(ST7066U_INITIALIZATION_DELAY_MS);
-    lcd_writeInstruction(ST7066U_FUNCTION_SET_8_BIT_TWO_LINE_FONT5x8);
+    lcd_writeInstruction(ST7066U_FUNCTION_SET_8_BIT_ONCE);
     lcd_writeInstruction(ST7066U_FUNCTION_SET_4_BIT_TWO_LINE_FONT5x8);
     lcd_writeInstruction(ST7066U_FUNCTION_SET_4_BIT_TWO_LINE_FONT5x8);
     lcd_writeInstruction(ST7066U_DISPLAY_ON_CURSOR_OFF);
@@ -1444,6 +1446,7 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 #define ST7066U_SET_DDRAM_ADDRESS_SECOND_LINE           0xC0
 #define ST7066U_SET_DDRAM_ADDRESS_THIRD_LINE            0x94
 #define ST7066U_SET_DDRAM_ADDRESS_FOURTH_LINE           0xD4
+#define ST7066U_BUSY_FLAG_DELAY_US                      20
 #define ST7066U_INSTRUCTION_DELAY_US                    40
 #define ST7066U_CLEAR_DISPLAY_DELAY_MS                  2
 #define ST7066U_INITIALIZATION_DELAY_MS                 50
@@ -1595,7 +1598,7 @@ void lcd_readBusyFlag(void)
     ST7066U_nRS;
     ST7066U_RW;
     ST7066U_BF_INPUT;
-    __delay_us(10);
+    __delay_us(ST7066U_BUSY_FLAG_DELAY_US);
     do{
         ST7066U_nE;
         ST7066U_E;
