--- a/modules/nhd-0420dz/pic16f177x.md
+++ b/modules/nhd-0420dz/pic16f177x.md
@@ -885,6 +885,7 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 #define ST7066U_SET_DDRAM_ADDRESS_SECOND_LINE           0xC0
 #define ST7066U_SET_DDRAM_ADDRESS_THIRD_LINE            0x94
 #define ST7066U_SET_DDRAM_ADDRESS_FOURTH_LINE           0xD4
+#define ST7066U_BUSY_FLAG_DELAY_US                      20
 #define ST7066U_INSTRUCTION_DELAY_US                    40
 #define ST7066U_CLEAR_DISPLAY_DELAY_MS                  2
 #define ST7066U_INITIALIZATION_DELAY_MS                 50
