--- a/modules/nhd-0420dz/pic16f177x.md
+++ b/modules/nhd-0420dz/pic16f177x.md
@@ -33,6 +33,7 @@
 // VEE - Close.
 // BCKL - Close.
 // VCAP - Open.
+// SPI/I2C - Open.
 
 // Pinout.
 // MODULE.01 -> GND.
@@ -284,6 +285,7 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 // VEE - Close.
 // BCKL - Close.
 // VCAP - Open.
+// SPI/I2C - Open.
 
 // Pinout.
 // MODULE.01 -> GND.
@@ -564,6 +566,7 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 // VEE - Close.
 // BCKL - Close.
 // VCAP - Open.
+// SPI/I2C - Open.
 
 // Pinout.
 // MODULE.01 -> GND.
@@ -827,6 +830,7 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 // VEE - Close.
 // BCKL - Close.
 // VCAP - Open.
+// SPI/I2C - Open.
 
 // Pinout.
 // MODULE.01 -> GND.
@@ -1126,6 +1130,7 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 // VEE - Close.
 // BCKL - Close.
 // VCAP - Open.
+// SPI/I2C - Open.
 
 // Pinout.
 // MODULE.01 -> GND.
@@ -1389,6 +1394,7 @@ void lcd_writeStringSetCursor(const uint8_t * u8Data, uint8_t u8Cursor)
 // VEE - Close.
 // BCKL - Close.
 // VCAP - Open.
+// SPI/I2C - Open.
 
 // Pinout.
 // MODULE.01 -> GND.
