--- a/boards/pic8bit-mini/pic16f1778.md
+++ b/boards/pic8bit-mini/pic16f1778.md
@@ -26,7 +26,7 @@
 
 // PIC8-Bit Mini Trainer.
 // 2x ADC CHANNELS.
-// 1x EUSART ASYNCHRONOUS TX/RX.
+// 1x EUSART RX/TX ASYNCHRONOUS.
 // 1x ROTARY ENCODER with SWITCH.
 // 2x SWITCHS.
 
