--- a/boards/pic8bit-nano/pic16f177x.md
+++ b/boards/pic8bit-nano/pic16f177x.md
@@ -20,7 +20,7 @@
 // PIC16F1777/9 - Compile with XC8(v2.31).
 // PIC16F1777/9 - @8MHz Internal Oscillator.
 
-// EUSART Tx/Rx Asynchronous.
+// EUSART Rx/Tx Asynchronous.
 
 // MCU.RC6.EUSART.UTX.
 // MCU.RC7.EUSART.RTX.
@@ -196,7 +196,7 @@ void eusart_writeString(const uint8_t * u8Data)
 // PIC16F1777/9 - Compile with XC8(v2.31).
 // PIC16F1777/9 - @24.576MHz External Oscillator.
 
-// EUSART Tx/Rx Asynchronous.
+// EUSART Rx/Tx Asynchronous.
 
 // MCU.RC6.EUSART.UTX.
 // MCU.RC7.EUSART.RTX.
@@ -226,8 +226,7 @@ void main(void)
 {
     // MCU Initialization.
     // Oscillator Settings.
-    OSCCONbits.SPLLEN= 0b0;
-    OSCCONbits.SCS = 0b00;
+    while(!OSCSTATbits.HFIOFS){};
     // Ports Settings.
     // PORT Data Register.
     PORTA = 0b00000000;
