--- a/boards/pic8bit-nano/pic16f177x.md
+++ b/boards/pic8bit-nano/pic16f177x.md
@@ -122,7 +122,7 @@ void main(void)
     RC1STA = 0x10;
     TX1STA = 0x00;
     BAUD1CON = 0x00;
-    // EUSART Enable.
+    // EUSART Rx/Tx Enable.
     RC1STAbits.SPEN = 0b1;
     TX1STAbits.TXEN = 0b1;
 
@@ -284,7 +284,7 @@ void main(void)
     RC1STA = 0x10;
     TX1STA = 0x00;
     BAUD1CON = 0x08;    
-    // EUSART Enable.
+    // EUSART Rx/Tx Enable.
     RC1STAbits.SPEN = 0b1;
     TX1STAbits.TXEN = 0b1;
 
