--- a/modules/ap572x/ap572x.md
+++ b/modules/ap572x/ap572x.md
@@ -1,4 +1,4 @@
-# AP5724/5/6.
+# AP5724/5/6 LED Driver.
 
 ## Contents.
 
@@ -16,11 +16,11 @@
 #include <xc.h>
 #include <stdint.h>
 #define _XTAL_FREQ 8000000
-// PIC16F1773/6/8 - Compile with XC8(v2.31).
-// PIC16F1773/6/8 - @8MHz Internal Oscillator.
+// PIC16F1778 - Compile with XC8(v2.31).
+// PIC16F1778 - @8MHz Internal Oscillator.
 // v0.1 - 11/2020.
 
-// AP572x - PWM 10-Bit ~1kHz.
+// AP572x LED Driver - PWM 10-Bit ~1kHz.
 
 // Main.
 void main(void)
@@ -93,11 +93,10 @@ void main(void)
     PWM3CONbits.EN = 0b1;
 
     while(1){
-        for(uint8_t dutyCycle=0; dutyCycle<125; dutyCycle++){
+        for(uint8_t dutyCycle=0; dutyCycle<124; dutyCycle++){
             PWM3DCH = dutyCycle;
             __delay_ms(50);
         }
-        __delay_ms(1000);
 
         // LED Off.
         PWM3DCH = 0;
@@ -112,7 +111,7 @@ void main(void)
         PWM3DCH = 93;
         __delay_ms(2000);
         // LED 100%.
-        PWM3DCH = 125;
+        PWM3DCH = 124;
         __delay_ms(2000);
     }
 }
