--- a/modules/cat4002/cat4002.md
+++ b/modules/cat4002/cat4002.md
@@ -2,90 +2,11 @@
 
 ## Contents.
 
-- [1.CAT4002 - .](#)
+- [1.CAT4002 - Constant Current LED.](#)
 
-## 1.CAT4002 - .
+## 1.CAT4002 - Constant Current LED.
 
 ```c
-// Configuration Registers.
-#pragma config FOSC = INTOSC, WDTE = OFF, PWRTE = OFF, MCLRE = ON, CP = OFF
-#pragma config BOREN = OFF, CLKOUTEN = OFF, IESO = OFF, FCMEN = OFF
-#pragma config WRT = OFF, PPS1WAY = ON, ZCD = OFF, PLLEN = OFF
-#pragma config STVREN = ON, BORV = LO, LPBOR = OFF, LVP = ON
-
-#include <xc.h>
-#include <stdint.h>
-#define _XTAL_FREQ 8000000
-// PIC16F1778 - Compile with XC8(v2.31).
-// PIC16F1778 - @8MHz Internal Oscillator.
-// v0.1 - 11/2020.
-
-// AP572x - PWM 10-Bit ~1kHz.
-
-// Main.
-void main(void)
-{
-    // MCU Initialization.
-    // Internal Oscillator Settings.
-    OSCCON = 0b01110000;
-    // Ports Settings.
-    // PORT Data Register.
-    PORTA = 0b00000000;
-    PORTB = 0b00000000;
-    PORTC = 0b00000000;
-    // TRIS Data Direction.
-    TRISA = 0b00000000;
-    TRISB = 0b00000000;
-    TRISC = 0b00000000;
-    // WPU Disable.
-    OPTION_REGbits.nWPUEN = 0b1;
-    // LATCH Outputs.
-    LATA = 0b00000000;
-    LATB = 0b00000000;
-    LATC = 0b00000000;
-    // ANSEL Analog.
-    ANSELA = 0b00000000;
-    ANSELB = 0b00000000;
-    ANSELC = 0b00000000;
-    // WPU Weak Pull-up.
-    WPUA = 0b00000000;
-    WPUB = 0b00000000;
-    WPUC = 0b00000000;
-    // ODCON Open-drain.
-    ODCONA = 0b00000000;
-    ODCONB = 0b00000000;
-    ODCONC = 0b00000000;
-    // SRLCON Slew Rate.
-    SLRCONA = 0b11111111;
-    SLRCONB = 0b11111111;
-    SLRCONC = 0b11111111;
-    // INLVL Input Level.
-    INLVLA  = 0b00000000;
-    INLVLB  = 0b00000000;
-    INLVLC  = 0b00000000;
-    // HIDRVB High Drive.
-    HIDRVB  = 0b00000000;
-    
-    // Dimming Levels.
-    //  0 = 100%.
-    //  1 =  97%.
-    //  8 =  75%.
-    // 15 =  52%.
-    // 23 =  26%.
-    // 31 =   0%.
-    // 32 = 100%.
-    __delay_ms(10);
-    LATCbits.LATC2 = 0b1;
-    for(uint8_t i=0; i<8; i++){
-        LATCbits.LATC2 = 0b0;
-        __delay_us(5);
-        LATCbits.LATC2 = 0b1;
-        __delay_us(1);
-    }
-
-    while(1){
-    }
-}
 ```
 
 ---
