--- a/modules/ap572x/ap572x.md
+++ b/modules/ap572x/ap572x.md
@@ -2,9 +2,9 @@
 
 ## Contents.
 
-- [1.AP5724/5/6 - PWM 10-Bit ~1kHz.](#1ap572456---pwm-10-bit-1khz)
+- [1.AP5724/5/6 - PWM ~1kHz.](#1ap572456---pwm-1khz)
 
-## 1.AP5724/5/6 - PWM 10-Bit ~1kHz.
+## 1.AP5724/5/6 - PWM ~1kHz.
 
 ```c
 // Configuration Registers.
@@ -18,9 +18,9 @@
 #define _XTAL_FREQ 8000000
 // PIC16F1778 - Compile with XC8(v2.31).
 // PIC16F1778 - @8MHz Internal Oscillator.
-// v0.1 - 11/2020.
+// v0.1 - 01/2021.
 
-// AP572x LED Driver - PWM 10-Bit ~1kHz.
+// AP572x LED Driver - PWM ~1kHz.
 
 // Main.
 void main(void)
