--- a/modules/cat4238/cat4238.md
+++ b/modules/cat4238/cat4238.md
@@ -2,9 +2,9 @@
 
 ## Contents.
 
-- [1.CAT4238 - PWM 10-Bit ~1kHz.](#1cat4238---pwm-10-bit-1khz)
+- [1.CAT4238 - PWM ~1kHz.](#1cat4238---pwm-1khz)
 
-## 1.CAT4238 - PWM 10-Bit ~1kHz.
+## 1.CAT4238 - PWM ~1kHz.
 
 ```c
 // Configuration Registers.
@@ -18,9 +18,9 @@
 #define _XTAL_FREQ 8000000
 // PIC16F1778 - Compile with XC8(v2.31).
 // PIC16F1778 - @8MHz Internal Oscillator.
-// v0.1 - 11/2020.
+// v0.1 - 01/2021.
 
-// CAT4238 LED Driver - PWM 10-Bit ~1kHz.
+// CAT4238 LED Driver - PWM ~1kHz.
 
 // Main.
 void main(void)
