--- a/modules/cat4238/cat4238.md
+++ b/modules/cat4238/cat4238.md
@@ -2,9 +2,9 @@
 
 ## Contents.
 
-- [1.CAT4238 - PWM ~1kHz.](#1cat4238---pwm-1khz)
+- [1.PIC16F1778 - CAT4238 - PWM ~1kHz.](#1pic16f1778---cat4238---pwm-1khz)
 
-## 1.CAT4238 - PWM ~1kHz.
+## 1.PIC16F1778 - CAT4238 - PWM ~1kHz.
 
 ```c
 // Configuration Registers.
